--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,11 +1,11 @@
-body {
-  font-family: "Arial", "Meiryo" sans-serif;
-}
-
 .google-fonts {
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+}
+
+body {
+  font-family: "Arial", "Meiryo", sans-serif;
 }
 
 html{
